--- a/TimeNetExperimentGenerator/src/timenetexperimentgenerator/MainFrame.form
+++ b/TimeNetExperimentGenerator/src/timenetexperimentgenerator/MainFrame.form
@@ -102,14 +102,14 @@
                           <Group type="102" attributes="0">
                               <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jTextFieldSCPNFile" pref="393" max="32767" attributes="0"/>
+                                  <Component id="jTextFieldSCPNFile" pref="373" max="32767" attributes="0"/>
                                   <Group type="102" attributes="0">
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Component id="jScrollPane1" min="-2" pref="373" max="-2" attributes="0"/>
                                           <Component id="jButtonPathToTimeNet" alignment="0" min="-2" pref="192" max="-2" attributes="0"/>
                                           <Component id="jCheckBoxSlaveSimulator" alignment="0" min="-2" pref="198" max="-2" attributes="0"/>
                                       </Group>
-                                      <EmptySpace min="0" pref="20" max="32767" attributes="0"/>
+                                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -122,25 +122,25 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabelSimulationCount" pref="265" max="32767" attributes="0"/>
+                          <Component id="jLabelSimulationCount" pref="285" max="32767" attributes="0"/>
                           <Component id="jTabbedPane1" alignment="0" pref="0" max="32767" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
-                              <Component id="jButtonOpenSCPN" pref="144" max="32767" attributes="1"/>
+                              <Component id="jButtonOpenSCPN" pref="154" max="32767" attributes="1"/>
                               <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
-                              <Component id="jButtonReload" pref="116" max="32767" attributes="1"/>
+                              <Component id="jButtonReload" pref="126" max="32767" attributes="1"/>
                           </Group>
-                          <Component id="jSeparator2" alignment="0" pref="265" max="32767" attributes="1"/>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="jButtonExport" pref="0" max="32767" attributes="0"/>
-                              <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
-                              <Component id="jButton1" pref="238" max="32767" attributes="0"/>
-                          </Group>
-                          <Component id="jButtonGenerateListOfExperiments" alignment="0" pref="265" max="32767" attributes="1"/>
-                          <Component id="jButtonStartBatchSimulation" alignment="0" pref="265" max="32767" attributes="1"/>
-                          <Component id="jSeparator3" alignment="0" pref="265" max="32767" attributes="1"/>
-                          <Component id="jButtonLoadCacheFile" alignment="1" pref="265" max="32767" attributes="0"/>
+                          <Component id="jSeparator2" alignment="0" pref="285" max="32767" attributes="1"/>
                           <Group type="102" alignment="1" attributes="0">
-                              <Component id="jComboBoxSimulationType" pref="134" max="32767" attributes="0"/>
+                              <Component id="jButtonExport" pref="148" max="32767" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Component id="jButton1" min="-2" pref="137" max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="jButtonGenerateListOfExperiments" alignment="0" pref="285" max="32767" attributes="1"/>
+                          <Component id="jButtonStartBatchSimulation" alignment="0" pref="285" max="32767" attributes="1"/>
+                          <Component id="jSeparator3" alignment="0" pref="285" max="32767" attributes="1"/>
+                          <Component id="jButtonLoadCacheFile" alignment="1" pref="285" max="32767" attributes="0"/>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Component id="jComboBoxSimulationType" pref="154" max="32767" attributes="0"/>
                               <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="jButton2" max="32767" attributes="1"/>
@@ -417,10 +417,8 @@
     </Component>
     <Component class="javax.swing.JComboBox" name="jComboBoxSimulationType">
       <Properties>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="1">
-            <StringItem index="0" value="Sim"/>
-          </StringArray>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="new DefaultComboBoxModel(typeOfSimulator.values())" type="code"/>
         </Property>
       </Properties>
       <Events>
