--- a/TimeNetExperimentGenerator/src/timenetexperimentgenerator/optimization/OptimizerPreferences.form
+++ b/TimeNetExperimentGenerator/src/timenetexperimentgenerator/optimization/OptimizerPreferences.form
@@ -446,8 +446,8 @@
         <Container class="javax.swing.JPanel" name="jPanel1">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="Simple Annealing">
-                <Property name="tabTitle" type="java.lang.String" value="Simple Annealing"/>
+              <JTabbedPaneConstraints tabName="MultiStage">
+                <Property name="tabTitle" type="java.lang.String" value="MultiStage"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
